--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         id: build_module
         shell: pwsh
         run: |
-          ./Build.ps1 -Targets Package -Verbose:$${{ env.Debug }}
+          ./Build.ps1 -Targets Package -Verbose:$${{ env.Debug }} -InstallDependencies
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action/windows@v2
         if: always()
