--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,12 @@ jobs:
         shell: pwsh
         run: |
           ./Build.ps1 -Targets Package -Verbose:$${{ env.Debug }} -InstallDependencies
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action/windows@v2
-        if: always()
-        with:
-          files: |
-            out\TestResults-Pester*.xml
+      # - name: Publish Test Results
+      #   uses: EnricoMi/publish-unit-test-result-action/windows@v2
+      #   if: always()
+      #   with:
+      #     files: |
+      #       out\TestResults-Pester*.xml
       - name: Publish Portable
         uses: actions/upload-artifact@v4
         with:
