--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Build
 env:
   Config: Release
   Debug: ${{ false }}
-  
+  ModuleName: AzurePipelinesUtils
+
 on:
   pull_request:
     branches: [ main ]
@@ -39,11 +40,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: portable
-          path: "out/Portable/*.zip"
-      - name: Publish PowerShell Gallery
-        shell: pwsh
-        run: |
-          Publish-Module -Path "out/module" -NuGetApiKey ${{ secrets.PS_GALLERY_KEY }}
+          path: "out/portable/*.zip"
     outputs:
       BUILD_NAME: ${{ steps.build_module.outputs.BUILD_NAME }}
 
@@ -77,7 +74,7 @@ jobs:
           Install-Module PowerShellForGitHub -Scope CurrentUser -Force
 
           # Connect to GitHub
-          Set-GitHubConfiguration -SuppressTelemetryReminder -DefaultOwnerName igoravl -DefaultRepository tfscmdlets
+          Set-GitHubConfiguration -SuppressTelemetryReminder -DefaultOwnerName igoravl -DefaultRepository ${{ env.ModuleName }}
 
           $ghCreds = New-Object System.Management.Automation.PSCredential @( "pat",
             (ConvertTo-SecureString -String $env:GITHUB_TOKEN -AsPlainText -Force)
@@ -95,7 +92,7 @@ jobs:
           '@
 
           # Upload assets
-          @('msi/TfsCmdlets*.msi', 'nuget/TfsCmdlets*.nupkg', 'portable/TfsCmdlets*.zip', 'docs/TfsCmdlets*.zip') `
+          @('portable/${{ env.ModuleName }}*.zip') `
           | ForEach-Object { New-GitHubReleaseAsset -Release $release.Id -Path $_ }
 
     outputs:
@@ -118,7 +115,7 @@ jobs:
           # Install module
           Install-Module PowerShellForGitHub -Scope CurrentUser -Force
           # Connect to GitHub
-          Set-GitHubConfiguration -SuppressTelemetryReminder -DefaultOwnerName igoravl -DefaultRepository tfscmdlets
+          Set-GitHubConfiguration -SuppressTelemetryReminder -DefaultOwnerName igoravl -DefaultRepository ${{ env.ModuleName }}
           Set-GitHubAuthentication -SessionOnly -Credential (New-Object System.Management.Automation.PSCredential @("pat",
             (ConvertTo-SecureString -String $env:GITHUB_TOKEN -AsPlainText -Force)))
           # Promote release
@@ -132,37 +129,6 @@ jobs:
       RELEASE_NOTES: ${{ needs.Staging.outputs.RELEASE_NOTES }}
       RELEASE_URL: ${{ steps.promote_release.outputs.RELEASE_URL }}
       RELEASE_TAG: ${{ steps.promote_release.outputs.RELEASE_TAG }}
-
-  Site:
-
-    runs-on: ubuntu-latest
-    needs: [ Release ]
-    env:
-      BUILD_NAME: ${{ needs.Release.outputs.BUILD_NAME }}
-      RELEASE_NOTES: ${{ needs.Release.outputs.RELEASE_NOTES }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          path: site
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-      - name: Publish site
-        run: |
-          cd site && mkdir docs && pushd docs
-          git checkout --track origin/gh-pages
-          unzip -o ../../TfsCmdlets-Docs-*.zip
-          popd
-          echo build_info: TfsCmdlets v${BUILD_NAME}, released $(date +%F) >> _config.yml
-          echo >> _config.yml
-          git config --local user.name "Igor Abade"
-          git config --local user.email igoravl@gmail.com
-          git add *
-          git commit -m "Publish version $BUILD_NAME"
-          git push
 
   PSGallery:
 
@@ -182,9 +148,9 @@ jobs:
         run: |
           Install-Module PackageManagement -Scope CurrentUser -Force
           Install-Module PowerShellGet -Scope CurrentUser -Force
-          Expand-Archive TfsCmdlets-Portable*.zip -DestinationPath Module/TfsCmdlets
+          Expand-Archive AzureArtifacts*.zip -DestinationPath Module/${{ env.ModuleName }}
           $releaseNotes = $env:RELEASE_NOTES
-          Publish-Module -Name Module/TfsCmdlets -NuGetApiKey $env:PSGALLERY_KEY -AllowPreRelease -ReleaseNotes $releaseNotes
+          Publish-Module -Name Module/${{ env.ModuleName }} -NuGetApiKey $env:PSGALLERY_KEY -AllowPreRelease -ReleaseNotes $releaseNotes
 
   Nuget:
 
@@ -198,7 +164,7 @@ jobs:
           name: nuget
       - name: Push package
         run: |
-          dotnet nuget push $(ls TfsCmdlets*.nupkg) -s https://api.nuget.org/v3/index.json -k ${{ secrets.API_KEY }} --skip-duplicate
+          dotnet nuget push $(ls ${{ env.ModuleName }}*.nupkg) -s https://api.nuget.org/v3/index.json -k ${{ secrets.API_KEY }} --skip-duplicate
 
   Chocolatey:
 
@@ -220,7 +186,7 @@ jobs:
           iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
       - name: Push package
         run: |
-          choco push $(ls TfsCmdlets*.nupkg) --api-key $env:CHOCO_KEY --source='https://push.chocolatey.org/'
+          choco push $(ls ${{ env.ModuleName }}*.nupkg) --api-key $env:CHOCO_KEY --source='https://push.chocolatey.org/'
   
   WinGet:
 
@@ -238,7 +204,7 @@ jobs:
           cd winget-pkgs
           git remote add upstream https://github.com/microsoft/winget-pkgs.git
           git fetch upstream
-          git checkout -b "TfsCmdlets_$BUILD_NAME"
+          git checkout -b "${{ env.ModuleName }}_$BUILD_NAME"
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
@@ -250,9 +216,9 @@ jobs:
           cd winget-pkgs
           git config --local user.email "igoravl@gmail.com"
           git config --local user.name "Igor Abade"
-          git add manifests/i/Igoravl/TfsCmdlets/*
+          git add manifests/i/Igoravl/${{ env.ModuleName }}/*
           git commit -m "Release $BUILD_NAME"
-          git push -u origin "TfsCmdlets_$BUILD_NAME"
+          git push -u origin "${{ env.ModuleName }}_$BUILD_NAME"
       - name: Create pull request to microsoft/winget-pkgs
         shell: pwsh
         run: |
@@ -264,7 +230,7 @@ jobs:
             (ConvertTo-SecureString -String $env:GITHUB_TOKEN -AsPlainText -Force)))
           # Create pull request
           New-GitHubPullRequest -OwnerName Microsoft -RepositoryName winget-pkgs `
-            -Title "TfsCmdlets_$env:BUILD_NAME" -Head "igoravl:TfsCmdlets_$env:BUILD_NAME" -base master -Body @'
+            -Title "${{ env.ModuleName }}_$env:BUILD_NAME" -Head "igoravl:${{ env.ModuleName }}_$env:BUILD_NAME" -base master -Body @'
           - [x] Have you signed the [Contributor License Agreement](https://cla.opensource.microsoft.com/microsoft/winget-pkgs)?
           - [x] Have you checked that there aren't other open [pull requests](https://github.com/microsoft/winget-pkgs/pulls) for the same manifest update/change?
           - [x] Have you validated your manifest locally with `winget validate --manifest <path>`? 
@@ -297,4 +263,4 @@ jobs:
       #     RELEASE_TAG: ${{ needs.Release.outputs.RELEASE_TAG }}
       #   with:
       #     status: |
-      #       TfsCmdlets version ${{ env.BUILD_NAME }} has just been released. Check it out! https://github.com/igoravl/TfsCmdlets/releases/tag/v${{ env.RELEASE_TAG }}
+      #       ${{ env.ModuleName }} version ${{ env.BUILD_NAME }} has just been released. Check it out! https://github.com/igoravl/${{ env.ModuleName }}/releases/tag/v${{ env.RELEASE_TAG }}
