Add logging for release notes and publishing process in module promotion

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -154,6 +154,9 @@ jobs:
           New-Item -ItemType Directory -Path 'Module/${{ env.ModuleName }}' -Force
           Expand-Archive -Path (Get-ChildItem 'AzurePipelinesUtils*.zip') -DestinationPath 'Module/${{ env.ModuleName }}'
           $releaseNotes = $env:RELEASE_NOTES
+          Write-Host "Release Notes: $releaseNotes"
+          Write-Host "Publishing module..."
+          Get-ChildItem -Recurse
           Publish-Module -Name Module/${{ env.ModuleName }} -NuGetApiKey $env:PSGALLERY_KEY -AllowPreRelease -ReleaseNotes $releaseNotes
 
 
